@@ -1,14 +1,41 @@
-##########
-How to set up OntoQuery for another ontology?
-##########
+# UFO-based RDF Data Generator and Index
 
-1. Copy the OWL/OBO file to resources directory.
-2. Else you can point it directly to a FTP site. Set the name of the file/ Url pointing to FTP in Ontology.java .
-3. Set ID post-processing. If you are using an OBO file, you might need to precess the returned IDs,
-if they contain special characters not allowed in URLs. A common example is ":", which the OWL API converts to underscore.
-If you use OWL and no changes are made, just remove [.replaceAll("CHEBI_", "CHEBI:")] from DLQueryTool_modified.java or adjust it according to your ontology.
-4. Set custom variables in the first part of globalVariables.js as described in the file.
-5. Set up memory to at least 2GB and density limit as described "-Xms1024m -Xmx2048m -XX:MaxPermSize=128m -DentityExpansionLimit=1000000".
-6. While deploying, the ontology will loaded automatically (it takes a while depending upon the ontology)
+This repository contains the **UFO-based Data Generator (UDG)** and indexing tools for generating and managing large RDF datasets grounded in the **Unified Foundational Ontology (UFO)**. The generator produces synthetic RDF triples compliant with UFO foundational categories, stored in triple stores and efficiently indexed using a UFO-aligned indexing strategy. This setup enables semantic-aware querying and benchmarking of SPARQL engines over conceptually rich ontologies.
 
-Note: without DensityExpansionLimit, the RDFXML  parser will fail to parse the owl/obo file.
+---
+
+## Features
+
+- **UFO-Compliant RDF Data Generator**  
+  Generates instances of UFO foundational entities such as `Person` (Agents), `Action` (Events), and `Trope` (Qualities), including nested event structures and richly attributed entities.
+
+- **Configurable Data Generation**  
+  Supports scaling factors and parameters controlling the size and complexity of generated data (number of participants, event depth, trope counts, etc.).
+
+- **Semantic UFO-based Index**  
+  Indexes RDF triples according to UFO foundational distinctions (e.g., Endurants vs. Perdurants) to improve query performance on ontology-aligned queries.
+
+- **Integration with JOPA**  
+  Utilizes JOPA, a Java persistence API for OWL ontologies, for programmatic creation and management of ontology instances.
+
+- **SHACL Validator**  
+  Provides validation rules to ensure real-world or synthetic RDF datasets conform to the UFO structure and constraints required by the benchmark.
+
+---
+
+## Getting Started
+
+### Prerequisites
+
+- Java 8+  
+- Maven (for building the generator and related tools)  
+- A triple store supporting RDF and SPARQL (e.g., Virtuoso, Fuseki, Blazegraph)  
+- [JOPA](https://github.com/kbss-cvut/jopa) for ontology persistence  
+
+### Installation
+
+Clone the repository:
+
+```bash
+git clone https://github.com/ahmadjana/ufomodel.git
+cd ufomodel
